added personal info

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>First Last</h1>
-								<p>Position <br> Institution</p>
+								<h1>Trevor Dorn-Wallenstein</h1>
+								<p>PhD Candidate <br> University of Washington</p>
 								<p><a href="images/Astronomy.jpg" target="_blank">Cirriculum Vitae</a></p>
 							</div>
 						</div>
