updated index page, and CV

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AstroSites</title>
+		<title>Trevor Dorn-Wallenstein</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 							<div class="inner">
 								<h1>Trevor Dorn-Wallenstein</h1>
 								<p>PhD Candidate <br> University of Washington</p>
-								<p><a href="images/Astronomy.jpg" target="_blank">Cirriculum Vitae</a></p>
+								<p><a href="images/CV.pdf" target="_blank">Cirriculum Vitae</a></p>
 							</div>
 						</div>
 						<nav>
@@ -44,9 +44,9 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<p><b>Education:</b></p>
-								<p><b>Research Interests:</b></p>
-								<p><b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a></p>
+								<p><b>Education:</b> M.S.: University of Washington, B.A.: Wesleyan University</p>
+								<p><b>Research Interests:</b> Massive stars, stellar populations, time domain studies</p>
+								<p><b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/#search/q=%20author%3A%22dorn-wallenstein%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">ADS Author Query</a></p>
 							</article>
 
 						<!-- Work -->
