--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Trevor Dorn-Wallenstein</h1>
-								<p>PhD Candidate <br> University of Washington</p>
-								<p><a href="images/CV.pdf" target="_blank">Cirriculum Vitae</a></p>
+								<p>PhD Candidate, Astronomy <br> University of Washington</p>
+								<p><a href="images/CV.pdf" target="_blank">Curriculum Vitae</a></p>
+								<img src="images/small_portrait.jpg" width="650px">
 							</div>
 						</div>
 						<nav>
@@ -44,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<p><b>Education:</b> M.S.: University of Washington, B.A.: Wesleyan University</p>
+								<p><b>Education:</b> M.S.: University of Washington (2016), B.A.: Wesleyan University (2015)</p>
 								<p><b>Research Interests:</b> Massive stars, stellar populations, time domain studies</p>
 								<p><b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/#search/q=%20author%3A%22dorn-wallenstein%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">ADS Author Query</a></p>
 							</article>
@@ -53,8 +54,31 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
-								<p><b>Project I Title</b><br>Project description, including further links to posters, talks, publications.</p>
-								<p><b>Project II Title</b><br>Project description, including further links to posters, talks, publications.</p>
+								<p>
+								  Massive stars represent the extremes of stellar evolution, and are 
+								  the sites of exotic physical processes that shape the Universe. Their
+								  short lifetimes and intrinsic rarity make them a unique challenge to
+								  study. I use a mix of focused single-object studies, cutting-edge
+								  stellar population modelling, and techniques borrowed from Big Data 
+								  to better understand these stellar behemoths. 
+								</p>
+								<p>
+								  I am currently working on a number of projects using data from the
+								  Gaia mission to find large samples of massive stars. These samples
+								  allow us to take an unprecedented look into the behavior of massive
+								  stars in the time domain. I also use population synthesis models to
+								  understand the effects of binary interactions on stellar populations.
+								  Finally, I am interested in exotic evolutionary phases like 
+								  Thorne-Z&#x307;ytkow objects.
+								</p>
+								<a href="http://adsabs.harvard.edu/abs/2018ApJ...867..125D" target="_blank"><img src="images/WRO_WCWN_constSFH.pdf" width="650px"></a>
+								<p>
+								  From Dorn-Wallenstein & Levesque (2018): Theoretical WR/O vs. WC/WN 
+								  ratios, calculated for populations with constant star formation and 
+								  variable metallicity and binary fraction, with data from the Local
+								  Group for comparison. Theoretical populations from BPASS (Eldridge et
+								  al. 2017).
+								 </p>
 							</article>
 
 						<!-- About -->
