--- a/index.html
+++ b/index.html
@@ -64,20 +64,21 @@
 								</p>
 								<p>
 								  I am currently working on a number of projects using data from the
-								  Gaia mission to find large samples of massive stars. These samples
-								  allow us to take an unprecedented look into the behavior of massive
-								  stars in the time domain. I also use population synthesis models to
-								  understand the effects of binary interactions on stellar populations.
-								  Finally, I am interested in exotic evolutionary phases like 
-								  Thorne-Z&#x307;ytkow objects.
+								  TESS mission to characterize microvariability in evolved massive stars.
+								  Recently, my team discovered a new class of pulsating yellow supergiant,
+								  that we are calling "FYPS": Fast Yellow Pulsating Supergiants. We also
+								  found that yellow supergiants exhibit stochastic low frequency 
+								  variability (SLFV), that may be attributable to internal gravity waves.
 								</p>
-								<a href="http://adsabs.harvard.edu/abs/2018ApJ...867..125D" target="_blank"><img src="images/WRO_WCWN_constSFH.pdf" width="550px"></a>
+								<a href="" target="_blank"><img src="images/dered_hr.pdf" width="550px"></a>
 								<p>
-								  From Dorn-Wallenstein & Levesque (2018): Theoretical WR/O vs. WC/WN 
-								  ratios, calculated for populations with constant star formation and 
-								  variable metallicity and binary fraction, with data from the Local
-								  Group for comparison. Theoretical populations from BPASS (Eldridge et
-								  al. 2017).
+								  From Dorn-Wallenstein et al. (2020): Hertzprung-Russel Diagram of 76 
+								  cool supergiants, where each point has been replaced by its periodogram
+								  calculated from TESS lightcurves after dividing out the SLFV signal. 
+								  Regions of known variability are highlighted. Five stars with strong
+								  peaks in their periodograms are highlighted in green, and are not associated
+								  with any known class of variables. We dub this new class FYPS. See the
+								  discovery paper for more details.  
 								 </p>
 							</article>
 
