--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 <h1 style="margin: 0.0px 0.0px 16.0px 0.0px; text-align: center; line-height: 46.0px; font: 36.0px Helvetica; color: #ffffff; -webkit-text-stroke: #ffffff"><span class="s1"><b>TREVOR DORN-WALLENSTEIN</b></span></h1>
 <p class="p2"><span class="s1">PHD CANDIDATE, ASTRONOMY UNIVERSITY OF WASHINGTON</span></p>
-<p class="p2"><span class="s1"><a href="file:///Users/carina/tzdwi.github.io/images/CV.pdf">CURRICULUM VITAE<span class="s2"></span></a></span></p>
+<p class="p2"><span class="s1"><a href="file:///CV.pdf">CURRICULUM VITAE<span class="s2"></span></a></span></p>
 <p class="p3"><span class="s1"><img src="file:///small_portrait.jpg" alt="small_portrait.jpg"><span class="Apple-converted-space"> </span></span></p>
 <ul class="ul1">
   <li class="li4"><span class="s3"></span><span class="s1">INTRO<br>
