updated site for new position!

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Trevor Dorn-Wallenstein</h1>
-								<p>Postdoctoral Scholar, Astronomy <br> University of Washington</p>
+								<p>Carnegie Postdoctoral Fellow<br>Carnegie Observatories</p>
 								<p><a href="images/CV.pdf" target="_blank">Curriculum Vitae</a></p>
 								<img src="images/small_portrait.jpg" width="325px">
 							</div>
@@ -48,14 +48,14 @@
 								<p><b>Education:</b> Ph.D.: University of Washington (2021), B.A.: Wesleyan University (2015)</p>
 								<p><b>Research Interests:</b> Massive stars, stellar populations, time domain studies</p>
 								<p><b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/#search/q=%20author%3A%22dorn-wallenstein%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">ADS Author Query</a></p>
-								<p><b>About Me:</b> I am a postdoctoral scholar at the University of 
-								Washington, where I also received my Ph.D. in August, 2021. My research
-								interests are broad, spanning a multitude of methods &#8212; from  
-								stellar population synthesis to machine learning &#8212; that I use to
-								to study the evolution of massive stars. On this site, you can learn
+								<p><b>About Me:</b> I am a Carnegie Postdoctoral Fellow at the Carnegie Observatories. 
+								Previously, I received my Ph.D. in August, 2021 at the University of Washington.
+								I am broadly interested in stars, and use a multitude of methods  &#8212; from  
+								stellar population synthesis to machine learning &#8212; applied to novel datasets
+								to study massive stars at the ends of their lives. On this site, you can learn
 								more about my <a href="#research">research</a>, or see what I do
 								<a href="#community">outside</a> of astronomy. If you'd like to reach 
-								out with a question, or to have me give a talk at your institution,
+								out with a question, or want me to give a talk at your institution,
 								please see my <a href="#contact">contact info</a>.</p> 
 							</article>
 
@@ -65,7 +65,7 @@
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<p>
 								  Massive stars represent the extremes of stellar evolution, and are 
-								  the sites of exotic physical processes that shape the Universe. Their
+								  the sites of key physical processes that shape the Universe. Their
 								  short lifetimes and intrinsic rarity make them a unique challenge to
 								  study. I use a mix of focused single-object studies, cutting-edge
 								  stellar population modelling, and techniques borrowed from Big Data 
@@ -97,7 +97,10 @@
 								<h2 class="major">Community</h2>
 								<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 								<p>
-								  Beyond research, I'm a frequent baker, co-organizer of <a href="twitter.com/aotseattle">Astronomy on Tap SEA</a>, and drummer for <a href="nightlunchband.com">Night Lunch</a>. 
+								  Beyond research, I bake, play music, make coffee, and am the co-owner of the world's 
+ 								  greatest dog, <a href="https://www.instagram.com/lilpoderosa/?hl=en">Pod</a>. I also love 
+								  giving <a href="https://www.youtube.com/watch?v=Z2FqkBrQMsY">outreach talks</a>, and am 
+								  the drummer for the all-astronomer rock band <a href="nightlunchband.com">Night Lunch</a>. 
 								</p>
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/_yoHPWhaShA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					
@@ -115,12 +118,12 @@
 								to give public outreach talks.</p>
 								<p> <b>Email:</b></p>
 								<p>
-								  tzdw@uw.edu
+								  tdorn-wallenstein@carnegiescience.edu
 								</p>
 								<p> <b>Address:</b> </p>
 								<p>
-								  3910 15th Ave NE, C319<br> 
-								  Seattle, WA 98195-0002
+								  813 Santa Barbara Street<br> 
+								  Pasadena, CA 91101
 								</p>
 <!--								<form method="post" action="#">
 									<div class="fields">
