--- a/index.html
+++ b/index.html
@@ -72,23 +72,16 @@
 								  to better understand these stellar behemoths. 
 								</p>
 								<p>
-								  I am currently working on a number of projects using data from the TESS 
-								  mission to characterize microvariability in evolved massive stars. 
-								  Recently, my team discovered a new class of pulsating yellow 
-								  supergiant, that we are calling "FYPS": Fast Yellow Pulsating 
-								  Supergiants. We also found that yellow supergiants exhibit stochastic
-								  low frequency variability (SLFV), that may be attributable to internal 
-								  gravity waves.
+								  I am currently working on a number of projects using data from the Gaia
+								  mission to characterize large samples of evolved massive stars.
 								</p>
-								<a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...902...24D/" target="_blank"><img src="images/dered_hr.pdf" width="550px"></a>
+								<a href="https:tzdwi.github.io/" target="_blank"><img src="images/kde_breakdown.pdf" width="550px"></a>
 								<p>
-								  From Dorn-Wallenstein et al. (2020): Hertzprung-Russel Diagram of 76
-								  cool supergiants, where each point has been replaced by its 
-								  periodogram calculated from TESS lightcurves after dividing out the 
-								  SLFV signal. Regions of known variability are highlighted. Five stars
-								  with strong peaks in their periodograms are highlighted in green, and
-								  are not associated with any known class of variables. We dub this new
-								  class FYPS. See the discovery paper for more details.
+								  From Dorn-Wallenstein et al. (2023, in prep): Hertzprung-Russel Diagram,
+                                  visualizing the distribution of thousands of cool supergiants whose
+                                  properties are derived using machine learning. Through the use of
+                                  kernel density estimation, we are able to identify "overdensities"
+                                  in this space, which can be used to test stellar evolution
 								 </p>
 							</article>
 
@@ -147,7 +140,7 @@
 								</form>
 -->
 								<ul class="icons">
-									<li><a href="https://twitter.com/trevorzaylen" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="icon fa-square"><span class="label">Blue Sky</span></a></li>
 									<li><a href="https://instagram.com/trevor_zaylen" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/tzdwi" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -211,7 +204,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="twitter.com/trevorzaylen" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="icon fa-square"><span class="label">Blue Sky</span></a></li>
 										<li><a href="instagram.com/trevor_zaylen" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="github.com/tzdwi" class="icon fa-github"><span class="label">Github</span></a></li>
 									</ul>
