update paper link, bsky symbol

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 								  I am currently working on a number of projects using data from the Gaia
 								  mission to characterize large samples of evolved massive stars.
 								</p>
-								<a href="https:tzdwi.github.io/" target="_blank"><img src="images/kde_breakdown.pdf" width="550px"></a>
+								<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231016088D/abstract" target="_blank"><img src="images/kde_breakdown.pdf" width="550px"></a>
 								<p>
-								  From Dorn-Wallenstein et al. (2023, in prep): Hertzprung-Russel Diagram,
+								  From Dorn-Wallenstein et al. (2023, in press): Hertzprung-Russel Diagram,
                                   visualizing the distribution of thousands of cool supergiants whose
                                   properties are derived using machine learning. Through the use of
                                   kernel density estimation, we are able to identify "overdensities"
@@ -140,7 +140,7 @@
 								</form>
 -->
 								<ul class="icons">
-									<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="icon fa-square"><span class="label">Blue Sky</span></a></li>
+									<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="icon fa-at"><span class="label">Blue Sky</span></a></li>
 									<li><a href="https://instagram.com/trevor_zaylen" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/tzdwi" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -204,7 +204,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="icon fa-square"><span class="label">Blue Sky</span></a></li>
+										<li><a href="https://bsky.app/profile/trevorzaylen.bsky.social" class="fa-solid fa-cloud-sun"><span class="label">Blue Sky</span></a></li>
 										<li><a href="instagram.com/trevor_zaylen" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="github.com/tzdwi" class="icon fa-github"><span class="label">Github</span></a></li>
 									</ul>
