updated CV, research page

--- a/index.html
+++ b/index.html
@@ -69,19 +69,22 @@
 								  short lifetimes and intrinsic rarity make them a unique challenge to
 								  study. I use a mix of focused single-object studies, cutting-edge
 								  stellar population modelling, and techniques borrowed from Big Data 
-								  to better understand these stellar behemoths. 
+								  to better understand these stellar behemoths.
 								</p>
 								<p>
-								  I am currently working on a number of projects using data from the Gaia
-								  mission to characterize large samples of evolved massive stars.
+								  I am currently working on a number of projects using data from 
+								  the Magellan telescopes at Las Campanas Observatory to
+								  characterize large samples of evolved massive stars at high spectral
+                                  resolution.
 								</p>
-								<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231016088D/abstract" target="_blank"><img src="images/kde_breakdown.pdf" width="550px"></a>
+								<a href="https://ui.adsabs.harvard.edu/abs/arXiv:2508.14971" target="_blank"><img src="images/turb_vels_GMM.pdf" width="550px"></a>
 								<p>
-								  From Dorn-Wallenstein et al. (2023, in press): Hertzprung-Russel Diagram,
-                                  visualizing the distribution of thousands of cool supergiants whose
-                                  properties are derived using machine learning. Through the use of
-                                  kernel density estimation, we are able to identify "overdensities"
-                                  in this space, which can be used to test stellar evolution
+								  From Dorn-Wallenstein et al. (2025, in press): micro- and
+								  macroturbulent velocities measured from a sample of yellow
+								  supergiants in the Large Magellanic Cloud. These measurements
+								  reveal two groups of yellow supergiants. In our paper, we examine the
+								  physical properties of these stars, the turbulent motions in their
+								  photospheres, and explore the origin of this divergent behavior.
 								 </p>
 							</article>
 
